cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__namespaced-pull-request-with-bot.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(NAMESPACED_QUERY).variables(json!({ \"id\" : \"2\" })).await"
---
data:
  gothub:
    serverVersion: "1"
    pullRequestOrIssue:
      __typename: GothubPullRequest
      title: Some bot PR
      checks:
        - Success!
      author:
        __typename: GothubBot
        id: "123"

