cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__namespaced-pull-request-with-user.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(NAMESPACED_QUERY).variables(json!({ \"id\" : \"1\" })).await"
---
data:
  gothub:
    pullRequestOrIssue:
      __typename: GothubPullRequest
      title: Creating the thing
      checks:
        - Success!
      author:
        __typename: GothubUser
        email: jim@example.com

