cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__unnamespaced-pull-request-with-bot.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(UNNAMESPACED_QUERY).variables(json!({ \"id\" : \"2\" })).await"
---
data:
  pullRequestOrIssue:
    __typename: PullRequest
    title: Some bot PR
    checks:
      - Success!
    author:
      __typename: Bot
      id: "123"

