cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__unnamespaced-pull-request-with-user.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(UNNAMESPACED_QUERY).variables(json!({ \"id\" : \"1\" })).await"
---
data:
  pullRequestOrIssue:
    __typename: PullRequest
    title: Creating the thing
    checks:
      - Success!
    author:
      __typename: User
      email: jim@example.com

